--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^2.0.0",
     "@roamhq/wrtc": "^0.8.0",
     "body-parser": "^1.20.3",
     "express": "^4.21.2"
